Changed favicon, fixed small device overflow

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,6 +1,8 @@
 @import 'stylesheets/variables';
 
 .app-Header {
+  overflow: hidden;
+  
   &-top {
     box-shadow: $shadow;
     display: flex;
